# numericcp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  requirements.txt
bindings/: CMakeLists.txt  bindings.cpp  sources.cmake
bindings/math/: bindings_matrix.cpp  bindings_matrix.hpp
bindings/ode/: bindings_euler_method.cpp  bindings_euler_method.hpp  bindings_ode_solver.cpp  bindings_ode_solver.hpp
bindings/ode_system/: bindings_ivp_problem.cpp  bindings_ivp_problem.hpp  bindings_linear_system.cpp  bindings_linear_system.hpp  bindings_system.cpp  bindings_system.hpp
cmake/: Dependencies.cmake
python/tests/: test_euler_solver.py  test_matrix.py  test_setup.py
src/: CMakeLists.txt  defs.hpp  sources.cmake
src/math/: matrix.cpp  matrix.hpp  vector_operations.hpp
src/ode/: euler_method.cpp  euler_method.hpp  ode_solver.cpp  ode_solver.hpp
src/ode_system/: ivp_problem.cpp  ivp_problem.hpp  linear_system.cpp  linear_system.hpp  system.hpp
src/serialization/: serialization.cpp  serialization.hpp
tests/: CMakeLists.txt  sources.cmake  test_matrix.cpp  test_serialization.cpp
tests/ode/: test_euler_method.cpp
tests/ode_system/: test_linear_system.cpp
